# pythonutils

./: .gitignore  ATTRIBUTIONS.txt  LICENSE  README.md  __init__.py  pyproject.toml  setup.cfg
src/: assorted.py  builtinMethods.py  extendedmethods.py  intmath.py  uncertainty.py
src/pythonutils/: __init__.py  assorted.py  builtinMethods.py  intmath.py  io.py  uncertainty.py
