[metadata]
name = pythonutils-nathan-oneill
version = 0.1.0
author = "Nathan O'Neill"
description = A collection of Python functions that may be useful.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nathan-oneill/pythonutils
project_urls =
    Bug Tracker = https://github.com/nathan-oneill/pythonutils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src